# CH347-I2C-TOOLS

./: CMakeLists.txt
src/: i2c.h  i2c_detect.c  i2c_dump.c  i2c_set.c  utils.h
